# KaTeXMath

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: renovate.json5
KaTeXMath/: .gitignore  build.gradle.kts  consumer-rules.pro
KaTeXMath-compose/: build.gradle.kts
KaTeXMath-compose/src/main/kotlin/icu/ketal/katexmath/: KaTeXMath.kt
KaTeXMath-core/: build.gradle.kts
KaTeXMath-core/src/main/cpp/: CMakeLists.txt  freetype_jni.cpp
KaTeXMath-core/src/main/java/com/pvporbit/freetype/: Bitmap.java  CharMap.java  Face.java  FreeType.java  FreeTypeConstants.java  GlyphMetrics.java  GlyphSlot.java  Kerning.java  Library.java  LibraryVersion.java  MTFreeTypeMathTable.kt  Size.java  SizeMetrics.java  SizeRequest.java  Utils.java
KaTeXMath-view/: build.gradle.kts
KaTeXMath/src/main/cpp/: CMakeLists.txt
app/: build.gradle.kts
app-view/: build.gradle.kts
app-view/src/main/: AndroidManifest.xml
app-view/src/main/res/layout/: activity_main.xml  content_main.xml
app-view/src/main/res/menu/: menu_main.xml
app-view/src/main/res/raw/: samples.txt  samples2.txt
app-view/src/main/res/values/: strings.xml  themes.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/raw/: samples.txt
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
gradle/build-logic/: build.gradle.kts  settings.gradle.kts
gradle/build-logic/src/main/kotlin/: build-logic.gradle.kts  module.publication.gradle.kts  plugins.kt
gradle/wrapper/: gradle-wrapper.properties
(+70 files in other folders)
